tweak bower.json

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "images",
+    "*.html"
   ],
   "dependencies": {
     "font-awesome": "fontawesome#~4.4.0",
