--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "elevatezoom",
-  "version": "1.0.0",
+  "version": "3.0.8",
   "description": "A jQuery image zoom plugin",
-  "main": "demo.html",
+  "main": "src/jquery.elevatezoom.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
